# school-p3

./: .gitignore  api_response.json  index.html  main.py  package-lock.json  package.json  prerender.js  tailwind.config.js  vite.config.js
public/: robots.txt
server/: .env.example  README.md  migrate_all_pages.py  migrate_applications.py  migrate_contacts.py  migrate_exams.py  migrate_home_content.py  migrate_site_pages.py  pyproject.toml  render.yaml  requirements.txt  school.db
server/scripts/: seed_about_content.py  seed_academics_content.py  seed_admissions_content.py  seed_apply_content.py  seed_contact_content.py  seed_facilities_content.py  seed_footer_content.py  seed_header_content.py
server/src/: main.py
server/src/api/v1/: deps.py
server/src/api/v1/endpoints/: admins.py  applications.py  auth.py  classes.py  contacts.py  exams.py  health.py  site_content.py  students.py  teachers.py
server/src/core/: config.py  logging.py  security.py
server/src/db/: base.py  init_db.py  session.py
server/src/db/models/: admin.py  application.py  contact_request.py  exam.py  school_class.py  site_page_content.py  student.py  teacher.py
src/: App.jsx  entry-server.jsx  index.css
src/admin/: AdminLayout.jsx  Admins.jsx  AdmissionRequests.jsx  Classes.jsx  ContactRequests.jsx  Dashboard.jsx  Exams.jsx  Inquiries.jsx  Login.jsx  Settings.jsx  StudentProfileModal.jsx  Students.jsx  TeacherProfileModal.jsx  Teachers.jsx
src/context/: DataContext.jsx
src/pages/: About.jsx  Academics.jsx  Admissions.jsx  Apply.jsx  Contact.jsx  ErrorPage.jsx  Facilities.jsx  (+6 more)
(+67 files in other folders)
