[project]
name = "school-p2-backend"
version = "0.1.0"
description = "Secure backend for School P2"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.1.0",
  "structlog>=24.1.0",
  "slowapi>=0.1.9",
  "httpx>=0.26.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "passlib[argon2]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "black>=24.1.0",
  "ruff>=0.1.14",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
